@@ -693,6 +693,10 @@ void MPVProcess::changeVF(const QString & filter, bool enable, const QVariant & 
 		f = "unsharp=la=1.5:ca=1.5";
 	}
 	else
+	if (filter == "flip" || filter == "mirror") {
+		f = filter;
+	}
+	else
 	if (filter == "scale" || filter == "gradfun") {
 		f = filter + "=" + option.toString();
 	}
